Fix layout bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,5 +6,6 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 300px;
+  width: 400px;
+  overflow-y: scroll;
 }
