--- a/client/src/components/List.css
+++ b/client/src/components/List.css
@@ -2,11 +2,9 @@
   display: flex;
   flex-direction: column;
   max-width: 500px;
-  overflow-y: scroll;
 }
 
 .button-container {
-  display: flex;
-  justify-content: center;
   width: 100%
 }
+
